force-app/main/default/objects/custom_create32__c/custom_create32__c.object-meta.xml
<CustomObject>
    <label>Custom created object32</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects32</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>