force-app/main/default/objects/custom_create32__c/fields/custom_create_32field530__c.field-meta.xml
<CustomField>
    <fullName>custom_create_32field530__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 32field530</label>
    <type>Checkbox</type>
</CustomField>